--- a/stats_app/package.json
+++ b/stats_app/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:build": "",
+    "start:build": "tsc -w",
+    "start:run": "nodemon build/index.js",
     "start": "concurrently npm:start:*"
   },
   "author": "",
