--- a/stats_app/package.json
+++ b/stats_app/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^15.6.1",
     "concurrently": "^6.2.0",
     "nodemon": "^2.0.7"
   }
